--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-config": "^0.3.1",
+    "react-native-elements": "^0.15.0",
     "react-native-linear-gradient": "^2.0.0",
     "react-native-navigation": "1.1.84",
     "react-native-scrollable-tab-view": "^0.7.4",
