--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "eslint-watch": "2.1.14",
     "lodash": "^4.16.6",
     "moment": "^2.16.0",
+    "native-base": "^2.3.1",
     "numeral": "^1.5.3",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
+    "react-native-blur": "^3.1.2",
     "react-native-config": "^0.3.1",
     "react-native-elements": "^0.15.0",
     "react-native-linear-gradient": "^2.0.0",
+    "react-native-message-bar": "^2.0.1",
+    "react-native-modal-datetime-picker": "^4.9.0",
     "react-native-navigation": "1.1.84",
     "react-native-scrollable-tab-view": "^0.7.4",
     "react-native-swiper": "^1.5.4",
