--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "react-native": "0.44.0",
     "react-native-blur": "^3.1.2",
     "react-native-config": "^0.3.1",
+    "react-native-dropdown": "0.0.6",
     "react-native-elements": "^0.15.0",
     "react-native-linear-gradient": "^2.0.0",
     "react-native-message-bar": "^2.0.1",
     "react-native-modal-datetime-picker": "^4.9.0",
+    "react-native-modal-dropdown": "^0.4.4",
     "react-native-navigation": "1.1.84",
     "react-native-scrollable-tab-view": "^0.7.4",
     "react-native-swiper": "^1.5.4",
